fix overlapping issues

--- a/packages/client/src/style.scss
+++ b/packages/client/src/style.scss
@@ -23,7 +23,7 @@ header#main-header {
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-  z-index: 9980;
+  z-index: 40;
   touch-action: none;
   pointer-events: none;
 
